@@ -1,3 +1,11 @@
+2007-07-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcelanguage.c:
+	* gtksourceview/gtksourcelanguage-parser-2.c:
+
+	Fix compilation with MSVC, fixes bug #459576, patch by
+	Elizabeth Smith.
+
 2007-07-22  Paolo Maggi  <paolo@gnome.org>
 
 	* gtksourceview/gtksourcecontextengine.c (set_tag_style): cleanup
